version/0.27/_sources/api/solver/_autosummary/settings/xy_plot.rst.txt
:orphan:

.. _xy_plot:

xy_plot
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.xy_plot
    :show-inheritance:

.. rubric:: Methods

========================================   =============================================

Method                                                                           Summary

========================================   =============================================
:ref:`create <create_1>`                                     Create an instance of this.

:ref:`delete <delete_1>`                                        Delete selected objects.

:ref:`rename <rename>`                                                Rename the object.

:ref:`list <list>`                                        List the names of the objects.

:ref:`list_properties <list_properties>`           List active properties of the object.

:ref:`make_a_copy <make_a_copy_1>`                                 Copy graphics object.

:ref:`display <display_2>`                                      Display graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`xy_plot_child <xy_plot_child>`


.. rubric:: Included in:

======================   =======================================================================================================================

Parent                                                                                                                                   Summary

======================   =======================================================================================================================
:ref:`plot_4 <plot_4>`       Provides access to creating new and editing existing plots (XY histograms and so on) of your computational results.

======================   =======================================================================================================================

